--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,7 +15,7 @@
         <item>Idi syda blya|x10|syda.gif</item> <!-- 11 -->
         <item>Chasiki|x10|tik_tak_noga.gif</item> <!-- 12 -->
     </string-array>
-    <string-array name="day_exercise">
+    <string-array name="day_exercises">
         <item>1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0,8,0,10,0,12</item>  <!-- Day 1 -->
         <item>8,0,3,0,8,0,10,0,12,0,5,0,7,0,9,0,11,0,2,0,4,0,6</item>  <!-- Day 2 -->
         <item>5,0,3,0,5,0,7,0,8,0,10,0,9,0,11,0,2,0,4,0,6,0,10</item>  <!-- Day 3 -->
