--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="exercise">
-        <item>Relax|30|fitnes_bg_black.jpeg</item> <!-- 0 -->
+        <item>Relax |7|relax.gif </item>
         <item>gantelia|30|gantelia.gif</item> <!-- 1 -->
         <item>all_body|30|helsy_all.gif</item> <!-- 2 -->
         <item>Koleno v duh|30|kolenom_v_dux.gif</item> <!-- 3 -->
@@ -13,29 +13,29 @@
         <item>Ruka v zad|30|ruka_vzad.gif</item> <!-- 9 -->
         <item>Kto tam|30|skrutaya_travma.gif</item> <!-- 10 -->
         <item>Idi syda blya|30|syda.gif</item> <!-- 11 -->
-        <item>Chasiki|30|tik_tak_noga.gif</item> <!-- 12 -->
+        <item>Chasiki|30|tik_tak_noga.gif</item> <!-- 0 -->
     </string-array>
     <string-array name="day_exercises">
-        <item>1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0,8,0,10,0,12</item>  <!-- Day 1 -->
-        <item>8,0,3,0,8,0,10,0,12,0,5,0,7,0,9,0,11,0,2,0,4,0,6</item>  <!-- Day 2 -->
-        <item>5,0,3,0,5,0,7,0,8,0,10,0,9,0,11,0,2,0,4,0,6,0,10</item>  <!-- Day 3 -->
-        <item>7,0,11,0,2,0,4,0,1,0,3,0,5,0,7,0,6,0,8,0,10,0,11</item>  <!-- Day 4 -->
-        <item>9,0,3,0,4,0,6,0,5,0,7,0,9,0,11,0,2,0,8,0,10,0,12</item>  <!-- Day 5 -->
-        <item>8,0,10,0,12,1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0</item>  <!-- Day 6 -->
-        <item>6,0,6,0,8,0,10,0,12,0,1,0,3,0,5,0,7,0,9,0,11,0,2</item>  <!-- Day 7 -->
-        <item>4,0,6,0,8,0,10,0,12,0,1,0,3,0,5,0,7,0,9,0,11,0,2</item>  <!-- Day 8 -->
-        <item>1,0,3,0,5,0,7,0,9,0,11,0,12,0,4,0,6,0,8,0,10,0,7</item>  <!-- Day 9 -->
-        <item>9,0,3,0,4,0,6,0,5,0,7,0,9,0,11,0,2,0,8,0,10,0,12</item>  <!-- Day 10 -->
-        <item>1,0,3,0,5,0,7,0,9,0,11,0,12,0,4,0,6,0,8,0,10,0,1</item>  <!-- Day 11 -->
-        <item>5,0,11,0,2,0,4,0,1,0,3,0,5,0,7,0,6,0,8,0,10,0,12</item>  <!-- Day 12 -->
-        <item>9,0,3,0,4,0,6,0,5,0,7,0,9,0,11,0,12,0,8,0,10,0,6</item>  <!-- Day 13 -->
-        <item>8,0,10,0,12,1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0</item>  <!-- Day 14 -->
-        <item>1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0,8,0,10,0,12</item>  <!-- Day 15 -->
-        <item>2,0,3,0,8,0,10,0,12,0,5,0,7,0,9,0,11,0,2,0,4,0,6</item>  <!-- Day 16 -->
-        <item>5,0,3,0,5,0,7,0,8,0,10,0,9,0,11,0,12,0,4,0,6,0,5</item>  <!-- Day 17 -->
-        <item>9,0,11,0,2,0,4,0,1,0,3,0,5,0,7,0,6,0,8,0,10,0,14</item>  <!-- Day 18 -->
-        <item>1,0,3,0,5,0,7,0,9,0,11,0,12,0,4,0,6,0,8,0,10,0,7</item>  <!-- Day 19 -->
-        <item>7,0,3,0,4,0,6,0,5,0,7,0,9,0,11,0,2,0,8,0,10,0,12</item>  <!-- Day 20 -->
+        <item>1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0,8,0,10</item>  <!-- Day 1 -->
+        <item>8,0,3,0,8,0,10,0,5,0,7,0,9,0,11,0,2,0,4,0,6</item>  <!-- Day 2 -->
+        <item>5,0,3,0,5,0,7,0,8,0,10,0,11,0,2,0,4,0,6,0,10</item>  <!-- Day 3 -->
+        <item>7,0,11,0,2,0,4,0,1,0,3,0,5,0,7,0,6,0,8,0,10</item>  <!-- Day 4 -->
+        <item>9,0,3,0,4,0,6,0,5,0,7,0,9,0,11,0,2,0,8,0,10</item>  <!-- Day 5 -->
+        <item>8,0,10,1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0</item>  <!-- Day 6 -->
+        <item>6,0,6,0,8,0,10,0,1,0,3,0,5,0,7,0,9,0,11,0,2</item>  <!-- Day 7 -->
+        <item>4,0,6,0,8,0,10,0,1,0,3,0,5,0,7,0,9,0,11,0,2</item>  <!-- Day 8 -->
+        <item>1,0,3,0,5,0,7,0,9,0,11,0,4,0,6,0,8,0,10,0,7</item>  <!-- Day 9 -->
+        <item>9,0,3,0,4,0,6,0,5,0,7,0,9,0,11,0,2,0,8,0,10</item>  <!-- Day 10 -->
+        <item>1,0,3,0,5,0,7,0,9,0,11,0,4,0,6,0,8,0,10,0,1</item>  <!-- Day 11 -->
+        <item>5,0,11,0,2,0,4,0,1,0,3,0,5,0,7,0,6,0,8,0,10</item>  <!-- Day 12 -->
+        <item>9,0,3,0,4,0,6,0,5,0,7,0,9,0,11,0,8,0,10,0,6</item>  <!-- Day 13 -->
+        <item>8,0,10,1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0</item>  <!-- Day 14 -->
+        <item>1,0,3,0,5,0,7,0,9,0,11,0,2,0,4,0,6,0,8,0,10</item>  <!-- Day 15 -->
+        <item>2,0,3,0,8,0,10,0,5,0,7,0,9,0,11,0,2,0,4,0,6</item>  <!-- Day 16 -->
+        <item>5,0,3,0,5,0,7,0,8,0,10,0,9,0,11,0,4,0,6,0,5</item>  <!-- Day 17 -->
+        <item>9,0,11,0,2,0,4,0,1,0,3,0,5,0,7,0,6,0,8,0,10</item>  <!-- Day 18 -->
+        <item>1,0,3,0,5,0,7,0,9,0,11,0,4,0,6,0,8,0,10,0,7</item>  <!-- Day 19 -->
+        <item>7,0,3,0,4,0,6,0,5,0,7,0,9,0,11,0,2,0,8,0,10</item>  <!-- Day 20 -->
     </string-array>
 
 </resources>
