--- a/app/src/main/res/layout/day_finish.xml
+++ b/app/src/main/res/layout/day_finish.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/blue_bg">
 
     <TextView
         android:id="@+id/textView2"
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/dayoff"
-        android:textColor="@color/black"
+        android:textColor="@color/black_light"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="На головну"
+        android:textColor="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imMain"
         app:layout_constraintStart_toStartOf="@+id/imMain"
@@ -38,5 +40,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:srcCompat="@drawable/fitnes_bg_black" />
+        app:srcCompat="@drawable/fitnes_bg" />
 </androidx.constraintlayout.widget.ConstraintLayout>
