--- a/app/src/main/res/layout/exercise_list_item.xml
+++ b/app/src/main/res/layout/exercise_list_item.xml
@@ -44,8 +44,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:text="30"
-            android:textColor="@color/blue"
+            android:textColor="@color/blue_dark"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/chBox"
             app:layout_constraintEnd_toStartOf="@+id/chBox"
             app:layout_constraintTop_toTopOf="@+id/chBox" />
