--- a/app/src/main/res/layout/fragment_days.xml
+++ b/app/src/main/res/layout/fragment_days.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="#61C3E1"
+    android:background="@color/blue_bg"
     tools:context=".fragments.DaysFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -42,6 +42,7 @@
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="#2196F3"
                 android:scaleType="centerCrop"
                 android:src="@drawable/fitnes_bg_black"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -57,11 +58,11 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="casual"
                 android:text="@string/slogan"
-                android:textColor="@color/white"
+                android:textColor="@color/orange"
                 android:textSize="24sp"
                 android:textStyle="bold|italic"
-                app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2"
+                app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="@+id/imageView2"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,6 +76,8 @@
                 android:layout_marginEnd="10dp"
                 android:progress="50"
                 android:progressBackgroundTint="#FA0000"
+                android:progressTint="#25669A"
+                android:scaleY="2"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -85,7 +88,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="casual"
                 android:text="Залишилось 20 днів"
-                android:textColor="@color/white"
+                android:textColor="@color/orange"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/pBar"
                 app:layout_constraintEnd_toEndOf="@+id/pBar"
                 app:layout_constraintStart_toStartOf="@+id/pBar" />
